--- a/src/to-do-list.css
+++ b/src/to-do-list.css
@@ -6,6 +6,15 @@
     margin: 1%;   
     }
 
+.check-img{
+    width: 28px;
+    height: 28px;
+    margin-right: 6%;
+    margin-top: 25px;
+}
+.complete{
+    background-color: #f1e866b7;
+}
 .enter-text{
         padding-left: 16px;
         font-size: 22px;
@@ -18,8 +27,29 @@
         box-shadow: 1px 0px 14px 5px rgba(0, 0, 0, 0.39);
 }
 
+footer{
+    align-items: center;
+    background-color: #573bf5af;
+    bottom: 10px;
+    display: flex;
+    height: 6vh;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-left: -5%;
+    width: 100vw;
+
+
+
+}
+
+footer p{
+    font-size: 100%;
+    margin:0% 5%;
+}
+
 html, body{
     margin: 0px;
+    padding: 0px;
     background-image: url('img/back.png');
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -35,33 +65,16 @@ header{
 [type='checkbox']{display: none;}
 
 label{
+    display: flex;
+    flex-direction: row;
     font-size: 25px;
-    margin-left: 70px;
-    white-space: nowrap;
-    overflow: hidden;
-    white-space: initial;
-    text-overflow: initial;
+    margin-left: 7%;
+    
 }
 
-
-label:before{
-   margin-right: 10%;
-   margin-left: 12%;
-    content:'';
-    border: solid 5px rgb(148, 148, 148);
-    border-radius: 10px;
-    left: 0px;
-    height: 25px;
-    width: 25px;
-    position: absolute;
+label p{
+    width: 220PX;
 }
-
-
-[type='checkbox']:checked + label:before{
-border-color: #FE5F0B;
-background: #FE5F0B
-}
-
 
 li{
 background-color: rgba(255, 255, 255, 0.74);
@@ -78,7 +91,8 @@ box-shadow: 1px -3px 14px 5px rgba(0, 0, 0, 0.39);
 
 .message{
     font-size: 30px;
-    text-align: center;
+    text-align: inherit;
+    margin: 0px;
 }
 
 .submit-style {
@@ -93,9 +107,9 @@ font-weight: 500;
 line-height: 2.5;
 outline: transparent;
 padding: 0 1rem;
-      text-align: center;
-      text-decoration: none;
-      transition: box-shadow .2s ease-in-out;
+ text-align: center;
+text-decoration: none;
+  transition: box-shadow .2s ease-in-out;
       user-select: none;
       -webkit-user-select: none;
       touch-action: manipulation;
@@ -146,6 +160,20 @@ ul{
 
 @media only screen and (min-width: 600px) {
     /* For desktop: */
+    .App-logo{
+        width: 20%;
+        height: 100%; 
+        margin: 1%;   
+        }
+
+    .enter-text{
+            padding-left: 25px;
+            font-size: 35px;
+            width: 30vw;
+            height:8vh;
+            margin-top: 10%;
+    }
+
     html, body{
         background-image: url('img/back.png');
         background-repeat: no-repeat;
@@ -157,59 +185,72 @@ ul{
         height: 25vh;
     }
 
-    .App-logo{
-        width: 20%;
-        height: 100%; 
-        margin: 1%;   
-        }
-
-        
-.enter-text{
-    padding-left: 25px;
-    font-size: 50px;
-    width: 30vw;
-    height:8vh;
-}
     .principal-content{
        flex-direction: row;
        align-items: flex-start;
     }
 
-    label:before{
-        margin-right: 10%;
-        margin-left: 55%;
-         height: 25px;
-         width: 25px;
-         position: absolute;
-     }
+    label{
+        font-size: 30px;
+        margin-left: 15%;
+    }
+
 
      li{
         border-radius: 0px 0px 10px 0px;
-        margin: 0px  10px 40px 20px;
-        width: 35vw;
-        height:10vh;
+        margin: 0px  120px 40px 0px;
+        width: 40vw;
+        height:14vh;
         }
 
      .message{
         margin-top: 0px;
-        font-size: 60px;
+        margin-bottom: 0px;
+        font-size: 40px;
     }
 
     .principal-content-section1{
         margin-left: 8%;
+        margin-top: 4%;
     }
 
     ul{
-        background-color: #85068542;
         margin-left: 10%;
+        margin-top: 2%;
     }
 
     .section1-commercial{
-        margin-top: 25%;
+        margin-top: 5%;
         width: 30vw;
         height: 30vw;
         background-image: url(img/slogan.png);
         background-size: 90%;
         background-repeat: no-repeat;
+    }
+
+    .submit-style{
+      width: 10vw;
+        font-size: 160%;
+    }
+
+    .trash{
+        margin-right: 25px;
+        width: 40px;
+    }
+
+    footer{
+        margin-left: -2%;
+        position: inherit;    
+    }
+    
+    footer p{
+        font-size: 32px;
+        margin:0% 5%;
+    }
+
+    .check-img{
+        margin-right: 10%;
+        margin-top: 35px;
+        margin-left: -40PX;
     }
   }
